Revert "finish.htmlのコンフリクト対応後コミット取り消し"
This reverts commit da320ba4bcf2776d3aac005974b36b043a205328.

--- a/finish.html
+++ b/finish.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>うーいんにメッセージを送ろう</title>
+        <title>うーいんにメッセージを送ろう２</title>
     </head>
     <body>
         <form action="./index.html" method="POST">
